--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 [dependencies]
 
 [dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
 insta = "1.39.0"
 proptest = "1.4.0"
+
+[[bench]]
+name = "and"
+harness = false
